--- a/Ambush/Ambush.vcxproj
+++ b/Ambush/Ambush.vcxproj
@@ -119,13 +119,23 @@
     <ClInclude Include="EventListener.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameTime.h" />
+    <ClInclude Include="Graph.h" />
+    <ClInclude Include="GraphArc.h" />
+    <ClInclude Include="GraphNode.h" />
     <ClInclude Include="InputManager.h" />
+    <ClInclude Include="NodeSearchCostComparer.h" />
+    <ClInclude Include="TextureLoader.h" />
+    <ClInclude Include="Threading.h" />
+    <ClInclude Include="WorldMap.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameTime.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="TextureLoader.cpp" />
+    <ClCompile Include="Threading.cpp" />
+    <ClCompile Include="WorldMap.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
